--- a/Labb3-NET22/MainView.xaml
+++ b/Labb3-NET22/MainView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
         <Label Content="Quiz Game" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
@@ -40,17 +40,17 @@
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Row="0" Content="Available Quizzes" HorizontalAlignment="Center" FontWeight="Bold"/>
-                <ScrollViewer Grid.Row="1">
-                    <ListBox x:Name="LstBoxAvailableQuizzes" SelectionChanged="QuizChanged"/>
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+                    <ListBox x:Name="lstBoxAvailableQuizzes" SelectionChanged="QuizChanged"/>
                 </ScrollViewer>
 
                 <Label Grid.Column="1" Content="Questions in quiz" HorizontalAlignment="Center" FontWeight="Bold"/>
-                <ScrollViewer Grid.Row="1" Grid.Column="1">
-                    <ListBox x:Name="LstBoxQuizQuestions"/>
+                <ScrollViewer Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                    <ListBox x:Name="lstBoxQuizQuestions"/>
                 </ScrollViewer>
             </Grid>
 
@@ -67,8 +67,8 @@
                            TextWrapping="Wrap"/>
             </Grid>
             
-            <ScrollViewer Grid.Row="2">
-                <StackPanel x:Name="StackPanelCategories" HorizontalAlignment="Center"/>
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
+                <WrapPanel x:Name="wrapPanelCategories" HorizontalAlignment="Center" Orientation="Horizontal"/>
             </ScrollViewer>
         </Grid>
     </Grid>
