--- a/Labb3-NET22/MainWindow.xaml
+++ b/Labb3-NET22/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Labb3_NET22"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="QuizGame" Height="450" Width="800">
     <Grid>
         <ContentControl x:Name="MainContent"/>
     </Grid>
